--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -19,10 +19,10 @@ jobs:
           node-version: 20
       - name: Install dependencies
         run: npm ci || npm install
-      - name: Build JSON shards
+       - name: Build JSON shards
         run: npm run build
         env:
-          MPSV_URL: https://data.mpsv.cz/od/soubory/volna-mista/volna-mista.json.gz
+          MPSV_URL: https://data.mpsv.cz/od/soubory/volna-mista/volna-mista.jsonld
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
