--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -2,31 +2,51 @@ name: Daily MPSV Data Build
 
 on:
   schedule:
-    - cron: "7 3 * * *"   # 03:07 UTC ~ 05:07 v ČR
+    - cron: "7 3 * * *"   # 03:07 UTC (~05:07 v ČR)
   workflow_dispatch: {}
+  push:
+    branches: [ main ]
+    paths:
+      - "tools/**"
+      - ".github/workflows/daily-build.yml"
+      - "package.json"
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+    env:
+      TZ: Europe/Prague
+      # Můžeš přepnout na .jsonld nebo .json.gz – skript zvládá všechny.
+      MPSV_URL: https://data.mpsv.cz/od/soubory/volna-mista/volna-mista.json
     permissions:
       contents: read
       pages: write
       id-token: write
+    concurrency:
+      group: "pages-deploy"
+      cancel-in-progress: true
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+
+      - name: Cache npm
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: npm-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            npm-${{ runner.os }}-
 
       - name: Install dependencies
         run: npm ci || npm install
 
       - name: Build JSON shards
         run: npm run build
-        env:
-          # MŮŽEŠ přepnout na .json.gz (viz build skript – obě varianty umíme):
-          # MPSV_URL: https://data.mpsv.cz/od/soubory/volna-mista/volna-mista.json.gz
-          MPSV_URL: https://data.mpsv.cz/od/soubory/volna-mista/volna-mista.json
 
       - name: Upload artifact (public/)
         uses: actions/upload-pages-artifact@v3
